# 10x-engineer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/async_ai_engineer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cli/: main.py
src/lib/: tmux_errors.py  tmux_interface.py
src/models/: session_info.py
src/ui/: session_entry.py  session_sidebar.py  terminal_widget.py  tmux_app.py
