[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-ai-engineer"
version = "0.1.0"
description = "A Modern Terminal Multiplexer for AI Development Workflows"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "mggger", email = "mggis0or1@gmail.com" },
]
dependencies = [
    "textual>=0.45.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.scripts]
"async-ai-engineer" = "cli.main:main"
"aai" = "cli.main:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
